--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -7,11 +7,15 @@ Flask-Bcrypt==1.0.1
 Flask-JWT-Extended==4.6.0
 Flask-Migrate==4.0.5
 Flask-SQLAlchemy==3.1.1
+iniconfig==2.0.0
 itsdangerous==2.1.2
 Jinja2==3.1.3
 Mako==1.3.2
 MarkupSafe==2.1.5
+packaging==23.2
+pluggy==1.4.0
 PyJWT==2.8.0
+pytest==8.0.0
 SQLAlchemy==2.0.27
 typing_extensions==4.9.0
 Werkzeug==3.0.1
