--- a/.gitignore
+++ b/.gitignore
@@ -49,3 +49,5 @@ backend/__pycache__/config.cpython-312.pyc
 backend/tests/__pycache__/__init__.cpython-312.pyc
 backend/tests/__pycache__/conftest.cpython-312-pytest-8.0.0.pyc
 backend/tests/__pycache__/test_project.cpython-312-pytest-8.0.0.pyc
+backend/tests/__pycache__/conftest.cpython-312-pytest-6.2.5.pyc
+backend/tests/__pycache__/test_project.cpython-312-pytest-6.2.5.pyc
