--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,38 +1,28 @@
-name: CI
+# This workflow will install Python dependencies, lint and check for syntax errors run with a single version of Python
+# After that the workflow will also run all unit tests via pytest with a single version of Python
+
+name: Unit Test on PUSH
 
 on:
   push:
-  pull_request:
+    branches-ignore: [ main ]
 
 jobs:
-  run-tests:
-    strategy:
-      fail-fast: false
-      matrix:
-        os: [macos-latest, windows-latest]
-        python-version:
-          - "3.8"
-          - "3.9"
-          - "3.10"
-          - "3.11"
-          - "3.12-dev"
-          - "pypy-3.7"
-          - "pypy-3.8"
-          - "pypy-3.9"
-    name: Test
-    runs-on: ${{ matrix.os }}
-
+  test:
+    runs-on: ubuntu-latest
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-      
-      - name : Set up Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: ${{ matrix.os }}
-      
-      - name: Install dependencies
-        run: python -m pip install pytest .
-    
-      - name: Run Tests
-        run: pytest
+    - uses: actions/checkout@v3
+    - name: Set up Python 3.x
+      uses: actions/setup-python@v2
+      with:
+        python-version: '3.x'
+    - name: Display Python version
+      run: python -c "import sys; print(sys.version)"
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install pytest
+        pip install -r backend/requirements.txt        
+    - name: Test with pytest
+      run: |
+        pytest
