--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,30 +1,32 @@
+# This YAML configuration file defines a GitHub Actions workflow for automated testing.
+# The workflow is designed to run tests automatically every 24 hours.
 
-name: Unit Test on PUSH
+name: Automated Testing config for continuous integration (CI)
 
 on:
-  push:
-  pull_request:
+  schedule:
+    - cron: '0 0 * * *' # Schedule the workflow to run every day at midnight UTC
 
 jobs:
   test:
     strategy:
-      fail-fast: false
-      matrix:
-        os: [ubuntu-latest, macos-latest, windows-latest]
-    runs-on: ${{ matrix.os }}
-    steps:
-    - uses: actions/checkout@v3
-    - name: Set up Python 3.x
+      fail-fast: false # Continue running jobs on other OSes even if one fails
+      matrix: # Define a matrix for testing on multiple operating systems
+        os: [ubuntu-latest, macos-latest, windows-latest] # Test on Ubuntu, macOS, and Windows
+    runs-on: ${{ matrix.os }} # Specify the operating system to run the job on
+    steps: # Define the steps to be executed in the job
+    - uses: actions/checkout@v3 # Check out the repository code
+    - name: Set up Python 3.x # Install and configure Python 3.x
       uses: actions/setup-python@v2
       with:
         python-version: '3.x'
-    - name: Display Python version
+    - name: Display Python version # Display the installed Python version
       run: python -c "import sys; print(sys.version)"
-    - name: Install dependencies
+    - name: Install dependencies # Install project dependencies
       run: |
-        python -m pip install --upgrade pip
-        pip install pytest
-        pip install -r backend/requirements.txt        
-    - name: Test with pytest
+        python -m pip install --upgrade pip # Upgrade pip
+        pip install pytest # Install pytest
+        pip install -r backend/requirements.txt # Install backend dependencies
+    - name: Test with pytest # Run tests using pytest
       run: |
-        pytest
+        pytest # Run pytest
