--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -4,6 +4,8 @@
 name: Automated Testing config for continuous integration (CI)
 
 on:
+  push: # Schedule the workflow to run every time a push request is made
+  pull_request: # Schedule the workflow to run every time a pull request is made
   schedule:
     - cron: '0 0 * * *' # Schedule the workflow to run every day at midnight UTC
 
