--- a/.gitignore
+++ b/.gitignore
@@ -43,11 +43,14 @@ backend/app.db
 
 # Virtual Environment
 /virtual_env
+/.venv
 
-backend/app/__pycache__
-backend/__pycache__/config.cpython-312.pyc
-backend/tests/__pycache__/__init__.cpython-312.pyc
-backend/tests/__pycache__/conftest.cpython-312-pytest-8.0.0.pyc
-backend/tests/__pycache__/test_project.cpython-312-pytest-8.0.0.pyc
-backend/tests/__pycache__/conftest.cpython-312-pytest-6.2.5.pyc
-backend/tests/__pycache__/test_project.cpython-312-pytest-6.2.5.pyc
+/backend/app/__pycache__
+/backend/__pycache__
+/.pytest_cache
+/backend/tests/*
+!backend/tests/test_project.py
+!backend/tests/__init__.py
+!backend/tests/conftest.py
+ignore.py
+backend/README.md
