--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,7 +16,12 @@
     "dayjs": "^1.11.10",
     "next": "14.1.0",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-icons": "^5.0.1",
+
+    
+    "react-native": "^0.73.5",
+    "react-native-chart-kit": "^6.12.0"
   },
   "devDependencies": {
     "@types/node": "^20",
