--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,10 +13,12 @@
     "@mantine/dates": "^7.5.3",
     "@mantine/form": "^7.5.3",
     "@mantine/hooks": "^7.5.3",
+    "@mantine/notifications": "^7.6.1",
     "dayjs": "^1.11.10",
     "next": "14.1.0",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-icons": "^5.0.1"
   },
   "devDependencies": {
     "@types/node": "^20",
