--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "@mantine/form": "^7.5.3",
     "@mantine/hooks": "^7.5.3",
     "@mantine/notifications": "^7.6.1",
+    "cookies-next": "^4.1.1",
     "dayjs": "^1.11.10",
     "next": "14.1.0",
     "react": "^18",
