--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,25 +1,50 @@
 alembic==1.13.1
+APScheduler==3.10.4
+attrs==23.2.0
 bcrypt==4.1.2
 blinker==1.7.0
 click==8.1.7
-exceptiongroup==1.2.0
+coverage==7.4.1
+distlib==0.3.8
+filelock==3.13.1
+flake8==7.0.0
 Flask==3.0.2
+Flask-APScheduler==1.13.1
 Flask-Bcrypt==1.0.1
 Flask-Cors==4.0.0
 Flask-JWT-Extended==4.6.0
 Flask-Migrate==4.0.5
 Flask-SQLAlchemy==3.1.1
-greenlet==3.0.3
+Flask-WTF==1.2.1
+importlib-metadata==4.13.0
 iniconfig==2.0.0
+install==1.3.5
 itsdangerous==2.1.2
 Jinja2==3.1.3
 Mako==1.3.2
 MarkupSafe==2.1.5
+mccabe==0.7.0
+mypy==1.8.0
+mypy-extensions==1.0.0
 packaging==23.2
+platformdirs==4.2.0
 pluggy==1.4.0
+py==1.11.0
+pycodestyle==2.11.1
+pyflakes==3.2.0
 PyJWT==2.8.0
-pytest==8.0.0
+pytest==6.2.5
+pytest-cov==2.12.1
+python-dateutil==2.9.0.post0
+pytz==2024.1
+setuptools==69.1.0
+six==1.16.0
 SQLAlchemy==2.0.27
-tomli==2.0.1
+toml==0.10.2
+tox==3.24.3
 typing_extensions==4.9.0
+tzlocal==5.2
+virtualenv==20.25.0
 Werkzeug==3.0.1
+WTForms==3.1.2
+zipp==3.17.0
