--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,13 +13,12 @@
     "@mantine/dates": "^7.5.3",
     "@mantine/form": "^7.5.3",
     "@mantine/hooks": "^7.5.3",
+    "card-validator": "^9.1.0",
     "dayjs": "^1.11.10",
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.0.1",
-
-    
     "react-native": "^0.73.5",
     "react-native-chart-kit": "^6.12.0"
   },
