--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,11 +17,11 @@
     "cookies-next": "^4.1.1",
     "card-validator": "^9.1.0",
     "dayjs": "^1.11.10",
+    "gpxparser": "^3.0.8",
     "js-cookie": "^3.0.5",
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
-    "react-icons": "^5.0.1",
     "react-icons": "^5.0.1",
     "react-native": "^0.73.5",
     "react-native-chart-kit": "^6.12.0"
