--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,20 +14,21 @@
     "@mantine/form": "^7.5.3",
     "@mantine/hooks": "^7.5.3",
     "@mantine/notifications": "^7.6.1",
-    "cookies-next": "^4.1.1",
     "card-validator": "^9.1.0",
+    "cookies-next": "^4.1.1",
     "dayjs": "^1.11.10",
     "gpxparser": "^3.0.8",
     "js-cookie": "^3.0.5",
+    "leaflet": "^1.9.4",
     "next": "14.1.0",
-    "react": "^18",
-    "react-dom": "^18",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
-    "react-native": "^0.73.5",
-    "react-native-chart-kit": "^6.12.0"
+    "react-leaflet": "^4.2.1"
   },
   "devDependencies": {
     "@types/js-cookie": "^3.0.6",
+    "@types/leaflet": "^1.9.8",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
