--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -10,6 +10,8 @@ contourpy==1.2.0
 coverage==7.4.1
 cycler==0.12.1
 distlib==0.3.8
+dnspython==2.6.1
+email_validator==2.1.1
 filelock==3.13.1
 flake8==7.0.0
 Flask==3.0.2
@@ -54,8 +56,10 @@ pytz==2024.1
 requests==2.31.0
 scikit-learn==1.4.1.post1
 scipy==1.12.0
+setuptools==69.1.0
 six==1.16.0
 SQLAlchemy==2.0.27
+-e git+https://github.com/uol-feps-soc-comp2913-2324s2-classroom/team-project-team-26.git@c3f8a6c6c5c11e06c31e612ef06c53e6ea7965e1#egg=TEAM_PROJECT_TEAM_26
 threadpoolctl==3.3.0
 toml==0.10.2
 tox==3.24.3
