--- a/.gitignore
+++ b/.gitignore
@@ -49,15 +49,13 @@ backend/app.db
 /backend/app/__pycache__
 /backend/__pycache__
 /.pytest_cache
-/backend/tests/*
-!backend/tests/test_project.py
 !backend/tests/__init__.py
 !backend/tests/conftest.py
-backend/statstest.py
 ignore.py
 backend/README.md
 backend/app/Admin/__pycache__
 backend/app/Client/__pycache__
+backend/tests/__pycache__
 
 /swe
 
