--- a/.gitignore
+++ b/.gitignore
@@ -56,7 +56,19 @@ backend/README.md
 backend/app/Admin/__pycache__
 backend/app/Client/__pycache__
 backend/tests/__pycache__
-
+backend/app/auth/__pycache__
+backend/app/friends/__pycache__
+backend/app/gps/__pycache__
+backend/app/imports/__pycache__
+backend/app/membership/__pycache__
+backend/app/stats/__pycache__
+backend/app/Admin/tests/__pycache__
+backend/app/auth/tests/__pycache__
+backend/app/friends/tests/__pycache__
+backend/app/gps/tests/__pycache__
+backend/app/imports/__pycache__
+backend/app/membership/tests/__pycache__
+backend/app/stats/tests/__pycache__
 /swe
 
 backend/testUsers.py
