--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.2",
     "leaflet": "^1.9.4",
+    "leaflet-defaulticon-compatibility": "^0.1.2",
     "moment": "^2.30.1",
     "next": "14.1.0",
     "react": "^18",
