--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,11 +26,10 @@
     "moment": "^2.30.1",
     "next": "14.1.0",
     "react": "^18",
+    "react-credit-cards-2": "^1.0.2",
     "react-dom": "^18",
     "react-icons": "^5.0.1",
     "react-leaflet": "^4.2.1",
-    "react-native": "^0.73.5",
-    "react-native-chart-kit": "^6.12.0",
     "recharts": "2"
   },
   "devDependencies": {
