--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,69 +1,68 @@
-alembic==1.13.1
-APScheduler==3.10.4
-attrs==23.2.0
-bcrypt==4.1.2
-blinker==1.7.0
-certifi==2024.2.2
-charset-normalizer==3.3.2
-click==8.1.7
-contourpy==1.2.0
-coverage==7.4.1
-cycler==0.12.1
-distlib==0.3.8
-filelock==3.13.1
-flake8==7.0.0
-Flask==3.0.2
-Flask-APScheduler==1.13.1
-Flask-Bcrypt==1.0.1
-Flask-Cors==4.0.0
-Flask-JWT-Extended==4.6.0
-Flask-Migrate==4.0.5
-Flask-SQLAlchemy==3.1.1
-Flask-WTF==1.2.1
-fonttools==4.50.0
-idna==3.6
-importlib-metadata==4.13.0
-iniconfig==2.0.0
-install==1.3.5
-itsdangerous==2.1.2
-Jinja2==3.1.3
-joblib==1.3.2
-kiwisolver==1.4.5
-Mako==1.3.2
-MarkupSafe==2.1.5
-matplotlib==3.8.3
-mccabe==0.7.0
-mypy==1.8.0
-mypy-extensions==1.0.0
-numpy==1.26.4
-packaging==23.2
-pandas==2.2.1
-patsy==0.5.6
-pillow==10.2.0
-platformdirs==4.2.0
-pluggy==1.4.0
-py==1.11.0
-pycodestyle==2.11.1
-pyflakes==3.2.0
-PyJWT==2.8.0
-pyparsing==3.1.2
-pytest==6.2.5
-pytest-cov==2.12.1
-python-dateutil==2.9.0.post0
-pytz==2024.1
-requests==2.31.0
-scikit-learn==1.4.1.post1
-scipy==1.12.0
-six==1.16.0
-SQLAlchemy==2.0.27
-threadpoolctl==3.3.0
-toml==0.10.2
-tox==3.24.3
-typing_extensions==4.9.0
-tzdata==2024.1
-tzlocal==5.2
-urllib3==2.2.1
-virtualenv==20.25.0
-Werkzeug==3.0.1
-WTForms==3.1.2
-zipp==3.17.0
+alembic
+APScheduler
+attrs
+bcrypt
+blinker
+certifi
+charset-normalizer
+click
+contourpy
+coverage
+cycler
+distlib
+filelock
+flake8
+Flask
+Flask-APScheduler
+Flask-Bcrypt
+Flask-Cors
+Flask-JWT-Extended
+Flask-Migrate
+Flask-SQLAlchemy
+Flask-WTF
+fonttools
+idna
+importlib-metadata
+iniconfig
+itsdangerous
+Jinja2
+joblib
+kiwisolver
+Mako
+MarkupSafe
+matplotlib
+mccabe
+mypy
+mypy-extensions
+numpy
+packaging
+pandas
+patsy
+pillow
+platformdirs
+pluggy
+py
+pycodestyle
+pyflakes
+PyJWT
+pyparsing
+pytest
+pytest-cov
+python-dateutil
+pytz
+requests
+scikit-learn
+scipy
+six
+SQLAlchemy
+threadpoolctl
+toml
+tox
+typing_extensions
+tzdata
+tzlocal
+urllib3
+virtualenv
+Werkzeug
+WTForms
+zipp
